--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="RAFIJ">
+    <meta name="description" content="Ejercicios funciones JS">
+    <meta name="keywords" content="arrays, funciones, javascript">
     <title>Ejercicios JS 2</title>
 </head>
 <body>
